# zte-mce888-ultra-daemon

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  js_implementation.js  pyproject.toml
.github/workflows/: alpine-single-exe.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: cli.md  metrics.md  mqtt.md
docs/discover/: lan_station_list.md  metrics.md  router_info.md
specs/001-initialize-boilerplate-hello/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-we-have-boilerplate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-we-need-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: __init__.py  zte.py
src/lib/: __init__.py  logging_setup.py  markdown_io.py  options.py  snapshots.py  topics.py  value_coerce.py
src/models/: __init__.py  daemon_state.py  metric_request.py  metrics.py  mqtt_config.py  publish_envelope.py  router_config.py
src/pipeline/: dispatcher.py
src/services/: __init__.py  metrics_aggregator.py  modem_mock.py  mqtt_client.py  mqtt_mock.py  neighbor_cells.py  zte_client.py  zte_paths.py
src/tools/: __init__.py  cli_docs.py
tests/contract/: __init__.py  test_auth_flow.py  test_discover_default_get.py  test_discover_default_post.py  test_discover_snapshot_and_relative_path.py  test_discover_target_file.py  test_missing_host_required.py  test_mqtt_contract.py  test_payload_json_header.py
tests/fixtures/: __init__.py
tests/unit/: test_cli_help.py  (+28 more)
(+30 files in other folders)
