[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zte-daemon"
version = "0.1.0"
description = "Developer CLI and mocked workflows for the ZTE MC888 Ultra daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "gmqtt>=0.6",
    "anyio>=4.0",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[project.scripts]
zte = "cli.zte:cli"

[tool.ruff]
# Keep lines readable and match our Python version
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Core error/warning rules, import sorting, and modernization
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
# Use Ruff's opinionated formatter for consistency
preview = true
